fix(loading): align kidzania logo

--- a/css/congratulatory.css
+++ b/css/congratulatory.css
@@ -79,7 +79,7 @@
 
 .kidzania-logo-congrats {
     position : absolute;
-    top      : 30px;
+    top      : 12px;
     left     : 1176px;
 }
 .kidzania-logo-congrats img {
